WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269739
[WebGPU] Crash in RemoteCommandEncoder::beginComputePass
https://bugs.webkit.org/show_bug.cgi?id=269739
Summary
[WebGPU] Crash in RemoteCommandEncoder::beginComputePass
Mike Wyrzykowski
Reported
2024-02-19 12:34:35 PST
[WebGPU] Crash in RemoteCommandEncoder::beginComputePass
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-02-19 12:34:54 PST
radar://123080112
Mike Wyrzykowski
Comment 2
2024-02-19 12:40:01 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24766
EWS
Comment 3
2024-02-19 23:39:23 PST
Committed
275024@main
(3bccf20560eb): <
https://commits.webkit.org/275024@main
> Reviewed commits have been landed. Closing PR #24766 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug