[WebGPU] Crash in RemoteCommandEncoder::beginComputePass https://bugs.webkit.org/show_bug.cgi?id=269739 <radar://123080112>

Reviewed by Dan Glastonbury.

There is no need to derefrence this optional value since a compromised
web process could set an nullopt descriptor and the member function
further down in the stack correctly handles a missing descriptor.

* Source/WebKit/GPUProcess/graphics/WebGPU/RemoteCommandEncoder.cpp:
(WebKit::RemoteCommandEncoder::beginComputePass):

Canonical link: https://commits.webkit.org/275024@main